--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
     "sass": "^1.68.0",
+    "stylelint": "^15.10.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
